--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
     
     <div id="band">
         <span id="bandSpan">
-        <img id="card0" src="/img/fresh.png">
-        <img id="card1" src="/img/fresh.png">
-        <img id="card2" src="/img/fresh.png">
-        <img id="card3" src="/img/fresh.png">
-        <img id="card4" src="/img/fresh.png">
+        <img id="card0" src="img/fresh.png">
+        <img id="card1" src="img/fresh.png">
+        <img id="card2" src="img/fresh.png">
+        <img id="card3" src="img/fresh.png">
+        <img id="card4" src="img/fresh.png">
         </span>
     </div>
     <div id="remove">
