--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
     </div>
     <hr>
     <a id="madeBy" href="https://jenniyoghurt.github.io/thingstoknow/" target="_blank">made by jenyoyo</a>
+        <p></p>
+        <p style="text-align: center; font-size: 12px;">last update: 23:07 19.09.2017 CEST</p>
         
     </div>
 </body>
