challenge stat boost

--- a/help.html
+++ b/help.html
@@ -41,7 +41,7 @@
         <hr>
         <h2>Challenge Live Events</h2>
         <h3>Team:</h3>
-        <p>Normal Event Team. Center should be a scorer for Multi Lives, if possible.</p>
+        <p>Normal Event Team. Center should be a scorer for Multi Lives, if possible. In Challenge Lives, you have to figure out what works best - scorers matter, but attribute and girl matches get a stat boost (on JP).</p>
         <br>
         <h3>Play:</h3>
         <p>Multi Lives; Challenge Lives using 200CP (event points multiply for 400 and 800CP, rewards like Miracle Crystals don't!)</p>
