--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="theme-color" content="darksalmon">
+<meta name="theme-color" content="#e6f0e6">
 <title>Help - Band Creator</title>
 <link rel="stylesheet" type="text/css" href="css.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Patrick+Hand" rel="stylesheet">
