--- a/goals.html
+++ b/goals.html
@@ -6,7 +6,7 @@
 <title>Band Creator</title>
 <link rel="stylesheet" type="text/css" href="css.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Patrick+Hand" rel="stylesheet">
-<link rel="icon" href="asterisk.png">
+<link rel="icon" href="img/girl4.png">
 
 <script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
