--- a/goals.html
+++ b/goals.html
@@ -25,6 +25,7 @@
             <h4>home:</h4>
             <div id="fourBestsHome"></div>
             <h4>missing:</h4>
+                <h3>EVERYBODY'S HOME</h3>
             <div id="fourBestsMissing"></div>
             </div>
         </div>
